static/css/zamboni/reviewers.less
/* ... */
.advanced-search .column3:after {
    content: ".";
    display: block;
    clear: both;
    height: 0;
    visibility: hidden;
}
#id_text_query {
    width: 25em;
    height: 1.5em;
}

/* Add-on Review Log */
#log-listing tr th:nth-child(1) {
    width: 20%;
}
#log-listing tr th:nth-child(2) {
    width: 40%;
}
#log-listing tr th:nth-child(3) {
    width: 25%;
}
#log-listing tr th:nth-child(4) {
    width: 15%;
}

/* Review Page */

.primary {
    width: 83.5%;
}

.secondary {
    width: 15%;
}

.secondary.scroll_sidebar_parent {
    position: relative;
}

.scroll_sidebar_parent #scroll_sidebar li a {
    font-weight: normal;
}

#scroll_sidebar {
    position: absolute;
    top: 0;
}
#scroll_sidebar.sticky {
    position: fixed;
    top: 10px;
}

.reviewer-review-action {
    font-weight: bold;
}

.review-files, .addons-list {
    margin: 0;
    width: 100%;
}

.review-files h5 {
    display: inline;
    font-weight: bold;
}

.review-files caption,
.scanners-results .scanner-result {
    border: 1px solid grey;
    opacity: inherit;
    margin: 2px 0;
    padding: 4px;
    position: inherit;
    text-align: center;

    a {
        display: block;
    }
}

.review-files .files {
    background-color: #FAFAFA;
    border-right: 1px dotted #DDDDDD;
    border-top: 0 none;
    width: 42%;
    padding: 15px;
}

.listing-body > td {
    padding: 15px;
}

.review-files .files .file-permissions {
    max-height: 25.5em;
    overflow: auto;
}
.review-files-header h3 {
    float: left;
}
.review-files-header h3 span {
    font-size: 0.7em;
}
.review-files-header h3 a.on {
    color: #333;
    font-weight: bold;
}
.review-files-header .review-files-paginate {
    float: right;
    margin-top: 2em;
}
.review-files-paginate ol {
    float: right;
    margin: 0;
    padding-left: 10px;
    text-align: right;
    top: -20px;
    width: auto;
}
table.activity {
    margin: 0;
    width: 100%;
}
table.activity th {
    width: 25%;
    padding-right: 1em;
}
table.activity tr {
    border-top: 1px dotted #ccc;
}
table.activity tr:first-child {
    border-top: 0 none;
}
.review-files .listing-header span.light {
    font-weight: normal;
    color: #000;
}
.review-files tr.listing-header:first-child {
    border-top: none;
}
.review-files tr.listing-header {
    border-top: 1px solid #A5BFCE;
}

.review-files td.due_date {
    text-align: right;
}


.review-files tr.listing-header.needs-human-review {
    background-color: lighten(@risk-high-color, 10%);
    border-top: 1px solid lighten(@risk-high-color, 5%);

    &:hover {
        background-color: @risk-high-color;
    }

    &:active {
        background-color: #FFF;
    }
}

.review-files tr.listing-header:hover {
    cursor: pointer;
    background-color: #CCE6FF;
}
.review-files tr.listing-header:active {
    cursor: pointer;
    background-color: #FFF;
}
.review-files tr.listing-header input[type=checkbox] {
    float: right;
}
.review-files .files > div {
    line-height: 1.3em;
    margin: 10px 0;
}
.review-files .no-activity {
    color: #777777;
    font-style: italic;
    text-align: center;
}
.review-files .install {
    padding: 0;
}
.review-files p.version-adu-value {
    display: inline;
}
.review-files .files > .compatibility, .review-files .files > .compatibility li {
    padding-top: 0;
}
.review-files .files > .compatibility > strong {
    vertical-align: top;
}
.review-files .files > .compatibility ul {
    display: inline-block;
    vertical-align: top;
}

.review-files .files .scanners-results .matched-rules {
    padding: 4px 4px 8px 4px;
    word-break: break-word;

    .matched-rules-rule {
        margin-bottom: 4px;
    }

    .matched-rules-files {
        & > details {
            overflow-x: auto;

            & > ul {
                border-left: 2px solid #999;
                padding-left: 4px;
                margin-left: 2px;
            }

            & > ul > li > div {
                white-space: nowrap;
            }
        }

        & > ul > li li:not(:has(*)) {
            /* li with only text and no nested elements can be displayed inline */
            display: inline-block;
        }

        dl {
            display: grid;
            gap: 4px;
            grid-template-columns: max-content;
            margin-bottom: 0;

            dl {
                margin-bottom: 1em;
                margin-left: 4px;
                padding-left: 4px;
            }

            li:last-child > dl {
                margin-bottom: 0;
            }

        }

        dt {
            margin: 0;
            font-weight: bold;
        }

        dd {
            grid-column-start: 2;
            margin: 0;
        }
    }
}

form.review-form .data-toggle {
    display: none; /* hide all toggles by default, they'll be shown through javascript */
}
#review-actions-form textarea,
#review-actions-form input[type=text],
#review-actions-form select {
    border: 1px solid #AFBDD3;
}

#review-actions-form #id_attachment_input {
    height: 100px;
    width: 30%;
}

#review-actions-form .review-actions-desc {
    text-align: center;
}

#review-actions-form {
    padding: 10px;
    display: none;
}

.review-actions {
    margin: 1em auto 0;
    border: 3px solid #E0EFFD;
    -moz-border-radius: 7px;
    -webkit-border-radius: 7px;
    border-radius: 7px;
}

.review-actions #review-actions-form {
    display: none;
}

.review-actions .action_nav #id_action {
    margin: 0;
    display: table;
    width: 100%;
}

.review-actions .action_nav #id_action>* {
    background-color: #E0EFFD;
    display: table-cell;
    text-align: center;
}

.review-actions .action_nav #id_action>*:active {
    background-color: #FFF;
}

.review-actions .action_nav #id_action>* input {
    display: none;
}

.review-actions .action_nav #id_action>* label {
    display: block;
    padding: 5px;
}
/* ... */

